<resources>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>

    <string name="app" translatable="false">
    <font size="22">Alltra\n</font>
    <font size="15">App Challenge 2023</font>
</string>

    <string name="version">
    <font size="22">Version\n</font>
    <font size="15">1.0</font>
</string>

    <string name="developer"><font size="22">Developers</font></string>

    <string name="Matheus" translatable="false">
    <font size="22">Matheus Ferreira Silva</font>
</string>

    <string name="Forza" translatable="false">
    <font size="22">Felipe Lorenzo S.S. Forza</font>
</string>

    <string name="email">
    <font size="22">Email\n</font>
    <a href="mailto:exoticnumbers.feedback@gmail.com?subject = Feedback&amp;body = Message">exoticnumbers.feedback@gmail.com</a>
</string>

    <string name="app_name" translatable="false">Alltra</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="user">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="create_account">Create account</string>
    <string name="corfirm_password">Confirm password</string>
    <string name="sign_in_instruction">Sign in to continue</string>
    <string name="different_password">Passwords don\'t match</string>
    <string name="error">Error!</string>
    <string name="oops">Oops!</string>
    <string name="try_again">Try Again</string>
    <string name="error_login">Incorrect username or password</string>
    <string name="internet_error">Connection Error\nCould not connect to the internet</string>
    <string name="generic_error">Sorry =(\nSomething went wrong</string>
    <string name="confirm_email">Confirm your email</string>
    <string name="resend_email">Resend email</string>
    <string name="verify_email">Verify your email and enter or paste the code we sent</string>
    <string name="signup_success">User registered successfully!</string>
    <string name="wrong_token">Incorrect code</string>
    <string name="ok" translatable="false">OK</string>
    <string name="account_already_exist">This user has already been registered</string>
    <string name="account_does_not_exist">This user has not been registered yet</string>
    <string name="same_password">This password has already been used!\nPlease use a different password</string>
    <string name="email_token_1">Hello,\n\nThis email is to confirm your registration on the Alltra platform. Your access token is:\n</string>
    <string name="email_token_2">\nUse this token to access the platform and start using our services.\n\nThank you for joining us, and we hope you have a great experience with us.\n\nSincerely,\nAlltra Team</string>
    <string name="success">yay!!</string>
    <string name="success_signup">User registered successfully</string>
    <string name="enter_email">Enter your email</string>
    <string name="create_new_password">Create a new password</string>
    <string name="changed_password">Password changed successfully!</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="credits">Credits</string>
    <string name="no_one_clicks_me">No one clicks me :(</string>
    <string name="others">Others</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="rate_us">Rate us</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="share_app">Share app</string>
    <string name="by_app_challenge" translatable="false">App Challenge 2023</string>
    <string name="error_opening_uri_1">Failed to share, please check your application</string>
    <string name="logout">Logout</string>
    <string name="under_construction">This feature is currently under construction :)</string>
    <string name="speed_test">Speed test</string>
    <string name="measure">Measure</string>
    <string name="data_usage">Data Usage</string>
    <string name="dashboard">Dashboard</string>
    <string name="monthly_usage">Monthly usage</string>
    <string name="week_avg_usage">Average weekly usage</string>
    <string name="category_usage">Category usage percentage</string>
    <string name="streaming">Streaming</string>
    <string name="internet">Internet</string>
    <string name="video_call">Video Call</string>
    <string name="download">Download</string>
    <string name="daily_usage">Average daily usage:</string>
    <string name="monthly_usage_avg">Average monthly usage:</string>
    <string name="app_usage">App usage</string>
    <string name="apps">Apps</string>
    <string name="live_graph">Live graph</string>
    <string name="hourly_usage">Hourly usage</string>
    <string name="location_usage">Top data consumption location</string>
    <string name="data_prediction">Data prediction</string>
    <string name="you_should_downgrade_your_mobile_plan_by">You should downgrade your mobile plan by:</string>
    <string name="you_are_overflowing_with_data">You are overflowing with data!</string>
    <string name="mobile_plan_review">Mobile plan review</string>
    <string name="you_are_lacking_data">You are lacking data!</string>
    <string name="you_should_upgrade_your_mobile_plan_by">You should upgrade your mobile plan by:</string>
    <string name="data_saving_suggestion">Data saving suggestion</string>
    <string name="you_have_low_data_consumption_there_are_no_savings_suggestions_at_this_time">Your data consumption is currently low, and there are no savings suggestions available at the moment.</string>
    <string name="consider_using_a_browser_with_data_compression_like_opera_mini_or_data_compression_apps_like_onavo_extend_or_the_built_in_option_on_android_additionally_compress_images_and_videos_before_sharing">1. Use a browser with data compression, such as Opera Mini, or data compression apps like Onavo Extend or the built-in option on Android\n\n2. Compress images and videos before sharing</string>
    <string name="remaining_mobile_data_days">Remaining mobile data days:</string>
    <string name="demo_app">Demo App!</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="music_files">Music</string>
    <string name="file_usage">File type usage percentage</string>

</resources>