<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_left_right_radius"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/custom_font"
        android:paddingTop="10dp"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/custom_font"
            android:textAlignment="textStart"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/daily_usage"/>

        <TextView
            android:id="@+id/dailyUsage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/second_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="20MB"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/custom_font"
            android:textAlignment="textStart"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/monthly_usage_avg"/>

        <TextView
            android:id="@+id/monthlyUsage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/second_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="20MB"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/week_avg_usage"/>


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_week"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/category_usage"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/file_usage"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart2"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/light_green"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/monthly_usage"/>


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/light_red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/hourly_usage"/>


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_hour"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_all_radius_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/location_usage"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapFragment"
            android:nestedScrollingEnabled="true"
            android:layout_marginTop="10dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>



</LinearLayout>