<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rateContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_all_radius_15"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/under_construction"
            app:lottie_speed="1" />

        <TextView
            android:fontFamily="@font/custom_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oops"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:autoSizeStepGranularity="2sp"
            android:textColor="@color/light_red"
            android:textSize="40sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:fontFamily="@font/custom_font"
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/under_construction"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tryAgain"
            android:fontFamily="@font/custom_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_red"
            android:background="@drawable/bg_all_radius_15" />

    </LinearLayout>
</RelativeLayout>